# router/authRoutes.js
@@ -3,8 +3,8 @@ const router = express.Router();
 const { signup, login } = require('../controllers/authController');
 
 
-router.post('/signup', signup);
+router.post('/api/signup', signup);
 
-router.post('/login', login);
+router.post('/api/login', login);
 
 module.exports = router;
