# router/favoritesRoutes.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const favoritesController = require('../controllers/favoritesControllers');
 const { protect } = require('../middlewares/authMiddleware');  // Your JWT auth middleware
 
-router.post('/', protect, favoritesController.addFavorite);
-router.get('/', protect, favoritesController.getFavorites);
+router.post('/api/favorites', protect, favoritesController.addFavorite);
+router.get('/api/favorites', protect, favoritesController.getFavorites);
 
 module.exports = router;
