# router/movieRoute.js
@@ -4,11 +4,11 @@ const movieController = require('../controllers/movieController');
 const { protect } = require('../middlewares/authMiddleware');
 
 // Protected Routes
-router.get('/upcoming', protect, movieController.getUpcomingMovies);
-router.get('/popular', protect, movieController.getPopularMovies);
-router.get('/top_rated', protect, movieController.getTopRatedMovies);
-router.get('/latest', protect, movieController.getLatestMovie);
-router.get('/search', protect, movieController.searchMovies);
-router.get('/:id', protect, movieController.getMovieDetails);
+router.get('/api/movies/upcoming', protect, movieController.getUpcomingMovies);
+router.get('/api/movies/popular', protect, movieController.getPopularMovies);
+router.get('/api/movies/top_rated', protect, movieController.getTopRatedMovies);
+router.get('/api/movies/latest', protect, movieController.getLatestMovie);
+router.get('/api/movies/search', protect, movieController.searchMovies);
+router.get('/api/movies/:id', protect, movieController.getMovieDetails);
 
 module.exports = router;
